--- a/AspNetCoreSpa/wwwroot/Client/app/questions/questions.component.scss
+++ b/AspNetCoreSpa/wwwroot/Client/app/questions/questions.component.scss
@@ -1,4 +1,6 @@
-﻿/*text styles*/
+﻿
+.questions-page{
+/*text styles*/
 .text {
     font-family: 'TEMPUS SANS ITC';
     font-weight: bold;
@@ -121,4 +123,5 @@ a:visited {
 /* Firefox 18- */
 :-ms-input-placeholder {
     color: #808080;
+}
 }
