--- a/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.html
@@ -13,7 +13,7 @@
             <label class="paragraphtext" style="width:30%"> {{FirstName}}</label>
             <label class="floating changeinfo" title={{TitleLinkChangeFirstName}} (click)="ToggleChangeFirstName()"> {{ChangeInfoFirstName}} </label>
     </p>
-</div>    
+</div>
 <div *ngIf="ShowChangeFirstName" class='panel panel-primary tatoodiv'>
         <div class='panel-heading' id='tatoopanel'>
             {{TitleChangeFirstName}}
@@ -22,7 +22,9 @@
         <div class='panel-body'>
             <div class='row'>
                 <label class='col-md-2 tatoolable'>{{LableChangeFirstName}}</label>
-                <input type='text' class='tatooinput marginbottom' placeholder="{{PlaceHolderChangeFirstName}}" [(ngModel)]='NewFirstName' />
+                <input type='text' [ngClass]="{'tatooinputerror': FirstNameOK==false}" class='tatooinput marginbottom' id="firstNameLabel" placeholder="{{PlaceHolderChangeFirstName}}" [(ngModel)]='NewFirstName' />
+                <label *ngIf="FirstNameOK" class='tatootool' style="margin-left: 39%">{{ToolFirstName}}</label>
+                <label *ngIf="!FirstNameOK" class='tatootoolerror' style="margin-left: 39%">{{ToolErrorFirstName}}</label>
             </div>
 
             <button class=' btn btn-primary tatoobutton' (click)='ChangeFirstName()' title={{TitleButtonChangeFirstName}}> 
@@ -48,7 +50,9 @@
     <div class='panel-body'>
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableChangeLastName}}</label>
-            <input type='text' class='tatooinput marginbottom' placeholder="{{PlaceHolderChangeLastName}}" [(ngModel)]='NewLastName' />
+            <input type='text' [ngClass]="{'tatooinputerror': LastNameOK==false}" class='tatooinput marginbottom' placeholder="{{PlaceHolderChangeLastName}}" [(ngModel)]='NewLastName' />
+            <label *ngIf="LastNameOK" class='tatootool' style="margin-left: 39%">{{ToolLastName}}</label>
+            <label *ngIf="!LastNameOK" class='tatootoolerror' style="margin-left: 39%">{{ToolErrorLastName}}</label>
         </div>
         
         <button class=' btn btn-primary tatoobutton' (click)='ChangeLastName()' title={{TitleButtonChangeLastName}}>
@@ -75,6 +79,7 @@
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableChangeEmail}}</label>
             <input type='email' class='tatooinput marginbottom' placeholder="{{PlaceHolderChangeEmail}}" [(ngModel)]='NewEmail' />
+            <label *ngIf="EmailOK" class='tatootool' style="margin-left: 39%">{{ToolEmail}}</label>
         </div>
 
         <div class='row'>
@@ -106,11 +111,13 @@
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableChangePassword}}</label>
             <input type='password' class='tatooinput marginbottom' placeholder="{{PlaceHolderChangePassword}}" [(ngModel)]='NewPassword' />
+            <label *ngIf="PasswordOK" class='tatootool' style="margin-left: 39%">{{ToolPassword}}</label>
         </div>
 
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableRepeatPassword}}</label>
             <input type='password' class='tatooinput marginbottom' placeholder="{{PlaceHolderRepeatPassword}}" [(ngModel)]='RepeatPassword' />
+            <label *ngIf="RepeatPasswordOK" class='tatootool' style="margin-left: 39%">{{ToolPasswordRepeat}}</label>
         </div>
 
         <div class='row'>
@@ -142,26 +149,31 @@
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableChangeFirstName}}</label>
             <input type='text' class='tatooinput marginbottom' placeholder="{{PlaceHolderChangeFirstName}}" [(ngModel)]='NewFirstName' />
+            <label *ngIf="FirstNameOK" class='tatootool' style="margin-left: 39%">{{ToolFirstName}}</label>
         </div>
 
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableChangeLastName}}</label>
             <input type='text' class='tatooinput marginbottom' placeholder="{{PlaceHolderChangeLastName}}" [(ngModel)]='NewLastName' />
+            <label *ngIf="LastNameOK" class='tatootool' style="margin-left: 39%">{{ToolLastName}}</label>
         </div>
 
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableChangeEmail}}</label>
             <input type='email' class='tatooinput marginbottom' placeholder="{{PlaceHolderChangeEmail}}" [(ngModel)]='NewEmail' />
+            <label *ngIf="EmailOK" class='tatootool' style="margin-left: 39%">{{ToolEmail}}</label>
         </div>
 
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableChangePassword}}</label>
             <input type='password' class='tatooinput marginbottom' placeholder="{{PlaceHolderChangePassword}}" [(ngModel)]='NewPassword' />
+            <label *ngIf="PasswordOK" class='tatootool' style="margin-left: 39%">{{ToolPassword}}</label>
         </div>
 
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableRepeatPassword}}</label>
             <input type='password' class='tatooinput marginbottom' placeholder="{{PlaceHolderRepeatPassword}}" [(ngModel)]='RepeatPassword' />
+            <label *ngIf="RepeatPasswordOK" class='tatootool' style="margin-left: 39%">{{ToolPasswordRepeat}}</label>
         </div>
 
         <div class='row'>
