--- a/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.scss
+++ b/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.scss
@@ -62,7 +62,30 @@
     font-size: 4vmin;
 }
 
+.tatootool {
+    font-size: 2vmin;
+    float: right;
+    color: rgba(41, 43, 41, 0.9);
+}
+
+.tatootoolerror {
+    color: red;
+    font-size: 2vmin;
+    float: right;
+}
+
+.tatoodiv {
+    width: 98%;
+    margin: 1%;
+    border-color: #000000;
+    font-family: 'comic sans ms';
+}
+
 @media only screen and (min-width: 800px) {
+    .tatoodiv {
+        width: 40%;
+    }
+    
     .floating {
         float: none;
         margin-right: 0%;
@@ -74,6 +97,14 @@
 
     #tatoopanel {
         font-size: 3vmin;
+    }
+
+    .tatootool {
+        font-size: 1.5vmin;
+    }
+
+    .tatootoolerror {
+        font-size: 1.5vmin;
     }
 }
 
@@ -102,19 +133,13 @@
     margin-right: 1%;
 }
 
+.tatooinputerror {
+    border-color: red;
+    background-color: #F6D9D9;
+    border-width: 1px;
+    border-style: solid;
+} 
+
 .marginbottom {
     margin-bottom: 1%;
-}
-
-.tatoodiv {
-    width: 98%;
-    margin: 1%;
-    border-color: #000000;
-    font-family: 'comic sans ms';
-}
-
-@media only screen and (min-width: 800px) {
-    .tatoodiv {
-        width: 40%;
-    }
 }
