--- a/AspNetCoreSpa/wwwroot/Client/app/questions/questions.component.scss
+++ b/AspNetCoreSpa/wwwroot/Client/app/questions/questions.component.scss
@@ -1,127 +1,169 @@
 ﻿
-.questions-page{
-/*text styles*/
-.text {
-    font-family: 'TEMPUS SANS ITC';
-    font-weight: bold;
-    color: rgba(41, 43, 41, 0.7);
-}
-
-.plaintext {
-    font-size: 4vmin;
-}
-
-.heading {
-    font-size: 7vmin;
-    color: rgba(41, 43, 41, 0.9);
-}
-
-.bolder {
-    font-weight: bold;
-}
-
-/*styles*/
-.tatooarticle {
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
-}
-
-.margin2 {
-    margin-left: 3%;
-    margin-right: 3%;
-}
-
-.tatoobutton {
-    background-color: #000000;
-    border-color: #FFFFFF;
-    color: #FFFFFF;
-    float: right;
-}
-
-.tatoobutton:hover {
-    background-color: #464451;
-    border-color: #D5D5D5;
-    color: #FFFFFF;
-}
-
-#tatoopanel {
-    background-color: #000000;
-    border-color: #FFFFFF;
-    border-color: #000000;
-    font-size: 3vmin;
-}
-
-.tatootable {
-    color: #000000;
-}
-
-.tatoodiv {
-    border-color: #000000;
-    font-family: 'comic sans ms';
-    color: #000000;
-    margin: 1%;
-}
-
-@media only screen and (min-width: 800px) {
-    .tatoodiv {
-        width: 40%;
+.questions-page {
+    /*text styles*/
+    .text {
+        font-family: 'TEMPUS SANS ITC';
+        font-weight: bold;
+        color: rgba(41, 43, 41, 0.7);
     }
-}
 
-.margin2 {
-    margin-left: 3%;
-    margin-right: 3%;
-}
+    .plaintext {
+        font-size: 4vmin;
+    }
 
-.tatoolable {
-    font-family: 'comic sans ms';
-    color: #000000;
-    min-width: 39%;
-    max-width: 39%;
-}
+    .heading {
+        font-size: 7vmin;
+        color: rgba(41, 43, 41, 0.9);
+    }
 
-.tatooinput {
-    font-family: 'comic sans ms';
-    color: #000000;
-    min-width: 58%;
-    max-width: 58%;
-    margin-right: 1%;
-}
+    .bolder {
+        font-weight: bold;
+    }
+    /*styles*/
+    .tatooarticle {
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.4);
+    }
 
-.marginbottom {
-    margin-bottom: 1%;
-}
+    .margin2 {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
 
-/*links*/
-a {
-    color: rgba(41, 43, 41, 0.9);
-    text-decoration: underline;
-}
+    .tatoobutton {
+        background-color: #000000;
+        border-color: #FFFFFF;
+        color: #FFFFFF;
+        float: right;
+    }
 
-a:hover {
-    color: rgba(41, 43, 41, 0.5);
-    text-decoration: underline;
-}
+    .tatoobutton:hover {
+        background-color: #464451;
+        border-color: #D5D5D5;
+        color: #FFFFFF;
+    }
 
-a:visited {
-    color: rgba(41, 43, 41, 0.9) !important;
-    text-decoration: underline;
-}
+    #tatoopanel {
+        background-color: #000000;
+        border-color: #FFFFFF;
+        border-color: #000000;
+        font-size: 3vmin;
+    }
 
-/*placeholders*/
-::-webkit-input-placeholder {
-    color: #808080;
-}
+    .tatootable {
+        color: #000000;
+    }
 
-::-moz-placeholder {
-    color: #808080;
-}
-/* Firefox 19+ */
-:-moz-placeholder {
-    color: #808080;
-}
-/* Firefox 18- */
-:-ms-input-placeholder {
-    color: #808080;
-}
+    .tatoodiv {
+        border-color: #000000;
+        font-family: 'comic sans ms';
+        color: #000000;
+        margin: 1%;
+    }
+
+    .tatootoolerror {
+        color: red;
+        font-size: 2vmin;
+        float: right;
+    }
+
+    .tatootool {
+        font-size: 2vmin;
+        float: right;
+        color: rgba(41, 43, 41, 0.9);
+    }
+
+    .tatooinputerror {
+        border-color: red;
+        background-color: #F6D9D9;
+        border-width: 1px;
+        border-style: solid;
+    }
+
+    .smallColumn {
+        width: 30px !important;
+        white-space: normal !important;
+    }
+
+    .bigColumn {
+        width: 70px !important;
+        white-space: normal !important;
+    }
+
+    @media only screen and (min-width: 800px) {
+        .tatoodiv {
+            width: 40%;
+        }
+
+        .tatootool {
+            font-size: 1.5vmin;
+        }
+
+        .tatootoolerror {
+            font-size: 1.5vmin;
+        }
+
+        .smallColumn {
+            width: 10%;
+        }
+
+        .bigColumn {
+            width: 35%;
+        }
+    }
+
+    .margin2 {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+
+    .tatoolable {
+        font-family: 'comic sans ms';
+        color: #000000;
+        min-width: 39%;
+        max-width: 39%;
+    }
+
+    .tatooinput {
+        font-family: 'comic sans ms';
+        color: #000000;
+        min-width: 58%;
+        max-width: 58%;
+        margin-right: 1%;
+    }
+
+    .marginbottom {
+        margin-bottom: 1%;
+    }
+    /*links*/
+    a {
+        color: rgba(41, 43, 41, 0.9);
+        text-decoration: underline;
+    }
+
+    a:hover {
+        color: rgba(41, 43, 41, 0.5);
+        text-decoration: underline;
+    }
+
+    a:visited {
+        color: rgba(41, 43, 41, 0.9) !important;
+        text-decoration: underline;
+    }
+    /*placeholders*/
+    ::-webkit-input-placeholder {
+        color: #808080;
+    }
+
+    ::-moz-placeholder {
+        color: #808080;
+    }
+    /* Firefox 19+ */
+    :-moz-placeholder {
+        color: #808080;
+    }
+    /* Firefox 18- */
+    :-ms-input-placeholder {
+        color: #808080;
+    }
 }
