Enable to change password and email.

--- a/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.html
@@ -112,19 +112,22 @@
     <div class='panel-body'>
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableChangePassword}}</label>
-            <input type='password' class='tatooinput marginbottom' placeholder="{{PlaceHolderChangePassword}}" [(ngModel)]='NewPassword' />
+            <input type='password' class='tatooinput marginbottom' [ngClass]="{'tatooinputerror': PasswordOK==false}" placeholder="{{PlaceHolderChangePassword}}" [(ngModel)]='NewPassword' />
             <label *ngIf="PasswordOK" class='tatootool' style="margin-left: 39%">{{ToolPassword}}</label>
+            <label *ngIf="!PasswordOK" class='tatootoolerror' style="margin-left: 39%">{{ToolErrorPassword}}</label>
         </div>
 
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableRepeatPassword}}</label>
-            <input type='password' class='tatooinput marginbottom' placeholder="{{PlaceHolderRepeatPassword}}" [(ngModel)]='RepeatPassword' />
+            <input type='password' class='tatooinput marginbottom' [ngClass]="{'tatooinputerror': RepeatPasswordOK==false}" placeholder="{{PlaceHolderRepeatPassword}}" [(ngModel)]='RepeatPassword' />
             <label *ngIf="RepeatPasswordOK" class='tatootool' style="margin-left: 39%">{{ToolPasswordRepeat}}</label>
+            <label *ngIf="!RepeatPasswordOK" class='tatootoolerror' style="margin-left: 39%">{{ToolErrorPasswordRepeat}}</label>
         </div>
 
         <div class='row'>
             <label class='col-md-2 tatoolable'>{{LableConfirmPassword}}</label>
-            <input type='password' class='tatooinput marginbottom' placeholder="{{PlaceHolderConfirmPassword}}" [(ngModel)]='ConfirmPassword' />
+            <input type='password' class='tatooinput marginbottom' [ngClass]="{'tatooinputerror': ConfirmPasswordOK==false}" placeholder="{{PlaceHolderConfirmPassword}}" [(ngModel)]='ConfirmPassword' />
+            <label *ngIf="!ConfirmPasswordOK" class='tatootoolerror' style="margin-left: 39%">{{ToolErrorConfirmPassword}}</label>
         </div>
 
         <button class=' btn btn-primary tatoobutton' (click)='ChangePassword()' title={{TitleButtonChangePassword}}>
