Finished validation on login/signup.

--- a/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.scss
+++ b/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.scss
@@ -66,12 +66,14 @@
     font-size: 2vmin;
     float: right;
     color: rgba(41, 43, 41, 0.9);
+    margin-right: 1%;
 }
 
 .tatootoolerror {
     color: red;
     font-size: 2vmin;
     float: right;
+    margin-right: 1%;
 }
 
 .tatoodiv {
