--- a/AspNetCoreSpa/wwwroot/Client/app/registration/login.component.scss
+++ b/AspNetCoreSpa/wwwroot/Client/app/registration/login.component.scss
@@ -41,8 +41,25 @@
     font-family: 'comic sans ms';
 }
 
+.tatootoolerror {
+    color: red;
+    font-size: 2vmin;
+    float: right;
+}
+
+.tatooinputerror {
+    border-color: red;
+    background-color: #F6D9D9;
+    border-width: 1px;
+    border-style: solid;
+} 
+
 @media only screen and (min-width: 800px) {
     .tatoodiv {
         width: 40%;
+    }
+
+    .tatootoolerror {
+        font-size: 1.5vmin;
     }
 }
