--- a/AspNetCoreSpa/wwwroot/Client/app/app.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/app.component.html
@@ -16,6 +16,7 @@
                     <li [routerLinkActive]="['active']"><a [routerLink]="['/contacts']">Contacts</a></li>
                     <li [routerLinkActive]="['active']"><a [routerLink]="['/aboutus']">About Us</a></li>
                     <li [routerLinkActive]="['active']"><a [routerLink]="['/help']">FAQ</a></li>
+                    <li [routerLinkActive]="['active']"><a [routerLink]="['/adminpage']">Admin Page</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
